2011-05-25  Jakub Jelinek  <jakub@redhat.com>

	PR target/49128
	* config/i386/driver-i386.c (host_detect_local_cpu): Fix a typo.

2011-05-18  Jan Hubicka  <jh@suse.cz>

	PR tree-optimization/44897 
	* ipa-inline.c (cgraph_decide_recursive_inlining): Do not divide
	by zero for insane profiles.

2011-05-24  Eric Botcazou  <ebotcazou@adacore.com>

	* config/sparc/sparc.c (sparc_option_override): If not set by the user,
	force flag_ira_share_save_slots to 0.

2011-05-24  Uros Bizjak  <ubizjak@gmail.com>

	PR target/49133
	* config/i386/sse.md (sse2_loadhpd): Remove shufpd alternative.

2011-05-24  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2011-05-24  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/49128
	* config/i386/driver-i386.c (host_detect_local_cpu): Always
	add -mno-XXX.  Handle FMA.

2011-05-23  Jakub Jelinek  <jakub@redhat.com>

	PR lto/49123
	* fold-const.c (constant_boolean_node): If type is non-NULL,
	use build_int_cst_type instead of build_int_cst.

	PR debug/49032
	* dbxout.c: Include cgraph.h.
	(dbxout_expand_expr): If a VAR_DECL is TREE_STATIC, not written
	and without value expr, return NULL if no varpool node exists for
	it or if it is not needed.
	* Makefile.in (dbxout.o): Depend on $(CGRAPH_H).

	PR c/49120
	* c-decl.c (start_decl): Convert expr to void_type_node.

	PR middle-end/48973
	* expr.c (expand_expr_real_2) <case LT_EXPR>: If do_store_flag
	failed and the comparison has a single bit signed type, use
	constm1_rtx instead of const1_rtx for true value.
	(do_store_flag): If ops->type is single bit signed type, disable
	signel bit test optimization and pass -1 instead of 1 as last
	parameter to emit_store_flag_force.

2011-05-22  Eric Botcazou  <ebotcazou@adacore.com>

	* config.gcc (sparc-*-elf*): Add sparc/t-crtin.
	(sparc-*-rtems*): Likewise.
	(sparc64-*-elf*): Likewise.
	(sparc64-*-rtems*): Likewise.
	(sparc*-*-solaris2*): Likewise.  Remove crti.o crtn.o extra parts.
	* config/sparc/t-crtin: New file.